# caretta-brain

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: engine.rs  lib.rs  tests.rs
core/src/config/: p2p.rs  storage.rs
core/src/context/: server.rs  service.rs
core/src/entity/: authorized_device.rs  device_config.rs  invitation_token.rs  message.rs  mod.rs  p2p_config.rs  tag.rs  tag_thread.rs  thread.rs  user_config.rs
core/src/entity/types/: mod.rs  secret_key.rs
core/src/ipc/: actor.rs  api.rs  api_trait.rs  mod.rs
core/src/ipc/context/: actor.rs  api.rs  mod.rs
core/src/traits/: as_detabase_connection.rs
core/src/types/: author_public_key.rs  author_secret_key.rs  device_identifier.rs  endpoint_public_key.rs  endpoint_secret_key.rs  invitation_token.rs  iroh_endpoint_id.rs  iroh_endpoint_secret.rs  macros.rs  mod.rs  namespace_public_key.rs  namespace_secret_key.rs  secret_key.rs  token_status.rs
core/src/util/: emptiable.rs  mergeable.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
mobile/: Cargo.toml
src/: lib.rs
src/args/: mod.rs
src/args/command/: init.rs  mod.rs
src/args/command/config/: client.rs  mod.rs  server.rs
src/args/command/device/: info.rs  invite.rs  join.rs  list.rs  mod.rs  ping.rs  remove.rs
src/args/command/note/: delete.rs  list.rs  mod.rs  open.rs
src/args/command/token/: list.rs  mod.rs  revoke.rs  show.rs
src/args/option/: config.rs  device_identifier.rs  mod.rs
src/parsed_config/: ipc.rs  log.rs  mod.rs  p2p.rs  storage.rs
src/parser/: gui.rs  server.rs
src/subcommand/: mod.rs
