[package]
name = "caretta-brain"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
exclude = [".gitignore"]

[dependencies]
caretta-brain-core.workspace = true

[workspace]
members = [".", "core", "mobile"]

[workspace.package]
edition = "2024"
version = "0.0.0"
description = "Your AI-powered second brain with serverless sync"
license = "GPL-3.0-or-later"
repository = "https://github.com/fluo10/caretta-brain" 

[workspace.dependencies]
caretta-brain-core = {path = "core", version = "0.0.0"}