[package]
name = "caretta-brain"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
exclude = [".gitignore"]

[[bin]]
name = "caretta-brain-server"
path = "src/bin/server.rs"

[[bin]]
name = "cbcli"
path = "src/bin/cli.rs"

[[bin]]
name = "caretta-brain"
path = "src/bin/gui.rs"

[features]
cli = []
server = []
gui = []

[dependencies]
async-trait.workspace = true
caretta-brain-core.workspace = true
chrono.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
iroh.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.8"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.7"


[workspace]
members = [".", "core", "mobile"]

[workspace.package]
edition = "2024"
version = "0.0.0"
description = "Your AI-powered second brain with serverless sync"
license = "GPL-3.0-or-later"
repository = "https://github.com/fluo10/caretta-brain" 

[workspace.dependencies]
async-trait = "0.1.89"
caretta-brain-core = {path = "core", version = "0.0.0"}
chrono = { version = "0.4.42", features = ["serde"] }
iroh = { version = "0.95.1", features = [ "discovery-local-network", "discovery-pkarr-dht" ] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
