[package]
name = "caretta-brain-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
service = []
client = []
desktop = []
server = ["service"]
mobile = ["service"]

[dependencies]
base32 = "0.5.1"
caretta-id = { version = "0.11.0-rc", features = [ "sea-orm", "serde" ] }
caretta-brain-migration.workspace = true
chrono.workspace = true
ciborium = "0.2.2"
ed25519-dalek = "3.0.0-pre"
iroh = { version = "0.95.1", features = [ "discovery-local-network", "discovery-pkarr-dht" ] }
iroh-docs = "0.95.0"
iroh-ping = "0.7.0"
irpc = "0.11.0"
n0-future = "0.3.1"
quinn = { package = "iroh-quinn", version = "0.14.0", default-features = false }
rand = "0.9.2"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono" ] }
sea-orm-migration = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ] }
serde = "1.0.228"
thiserror = "2.0.17"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.18.1", features = ["v7"] }
gethostname = "1.1.0"

[dev-dependencies]
tempfile = "3.23.0"

